--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -5,29 +5,28 @@
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html,
 body,
 #root,
 .app {
-    height: 100%;
-    width: 100%;
+  height: 100%;
+  width: 100%;
+  @apply text-sm;
+  @apply bg-gray-500;
+  @apply text-gray-900;
 }
 
-.base-styles {
-    @apply text-sm border-gray-500 text-gray-900;
-}
-
-@media ( min-width: 768px ) {
-    .custom-grid-rows {
-        grid-template-rows: repeat(8, 20vh);
-    }
+@media (min-width: 768px) {
+  .custom-grid-rows {
+    grid-template-rows: repeat(8, 20vh);
+  }
 }
 
 @media (min-width: 1280px) {
-    .custom-grid-rows {
-        grid-template-rows: repeat(8, 7.5vh);
-    }
+  .custom-grid-rows {
+    grid-template-rows: repeat(8, 7.5vh);
+  }
 }
